# jack-silence-detector

./: .gitattributes  README.md  meson.build  pyproject.toml
.github/workflows/: python-publish.yml
src/jack_silence_detector/: SilenceDetector.py  main.py
systemd/: jack-silence-detector.service.in  meson.build
